[package]
name = "game"
version = "0.1.0"
authors = ["Michael <stottmichael2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7.2"

[dependencies.sdl2]
default-features = false
features = ["image", "ttf", "mixer"]

